--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>JavaScript Sandbox</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="main.js" defer></script>
   </head>
 
   <body>
